--- a/src/main.css
+++ b/src/main.css
@@ -139,11 +139,6 @@
     font-size: 16px;
    
 }
-.exp-det{
-    
-    display: flex;
-    flex-direction: column;
-}
 
 .main .work{
     width: 800px;
@@ -286,13 +281,12 @@
         display: flex;
         flex-direction: column;
     }
-    .main__about .about__img img{
-        margin-top: 20px;
-    }
+
     .main__about .about__img img{
         height: 350px;
         width: 250px;
         margin-left: 0px;
+        margin-top: 20px;
     }
     .main__about .about__img::after{
         width: 100%;
@@ -300,16 +294,7 @@
         top: 10%;
         left: 20px;
     }
-    .exp-img{
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 400px;
-    }
-    .exp-det .exp-img img{
-        width: 300px;
-        height: auto;
-        
-    }
+
   
 }
 @media only screen and (min-width: 768px){
@@ -321,8 +306,11 @@
         font-size: 14px;
     }
     .main__about .details .about-2{
-        margin-left: -150px;
+        margin-left: -100px;
         margin-top: 250px;
+    }
+    .main__about .about__img{
+        margin-left: 30px;
     }
     .main__about .about__img img{
         margin-left: 50px;
@@ -334,15 +322,7 @@
        font-size: 14px;
        
    }
-   .exp-det{
-       display: flex;
-       flex-direction: row;
-   }
-   .exp-det .exp-img img{
-    height: 250px;
-    width: 250px;
-    margin-left: 30px;
-   }
+ 
 }
 @media only screen and (min-width: 1000px){
      .main__about .about__img img{
@@ -355,11 +335,7 @@
     .main__about .details {
         margin-top: 70px;
     }
-    .exp-det .exp-img img{
-        margin-left: 30px;
-        width: 300px;
-        margin-top: -20px;
-    }
+
     .exp p{
         width: 600px;
     }
