--- a/src/Contactform.css
+++ b/src/Contactform.css
@@ -93,6 +93,8 @@ form > button{
       outline: none;
       border: 1px solid #9e59aa;
       text-align: center;
+      justify-content: center;
+      align-items: center;
       cursor: pointer;
       margin-top: 30px;
       margin-bottom: 50px;
@@ -105,7 +107,7 @@ form > button{
   }
   form > button .icons{
       margin-left: 3px;
-      margin-top: 1.2px;
+      margin-top: 3px;
   }
   @media only screen and (max-width: 768px){
       form{
